# Sign-Bridge

./: .env.local.example  .gitignore  TRAINING.md  TRAINING_NO_RECORDING.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
backend/: .env.example  package-lock.json  package.json  server.js
backend/middleware/: auth.js
backend/models/: Conversation.js  User.js
backend/routes/: auth.js  history.js  sync.js  users.js
backend/services/: tokens.js
public/: manifest.json  sw.js
public/vocabularies/: daily.json  emergency.json
scripts/: smoke-check.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/config/: modelManifest.ts
src/hooks/: useCamera.ts  useCollectMode.ts  useMediaPipe.ts  useOfflineModels.ts  usePWA.ts  usePracticeMode.ts  useSentenceToSign.ts  useSignTranslation.ts
src/lib/: cn.ts
training/: build_gloss2en_index.py  download_wlasl.py  evaluate_model.py  export_builtin_templates.py  export_tfjs_quantized.py  feature_extract.py  keras_backend.py  merge_datasets.py  prepare_continuous_gloss.py  prepare_from_wlasl.py  prepare_gloss2en.py  requirements-base.txt  requirements-core.txt  requirements-ml.txt  requirements.txt  serialize_frame.py  setup_env.py  train_gloss2en.py  train_gloss_ctc.py  train_lstm.py  train_public.py  train_tcn.py
training/stubs/tensorflow_decision_forests/: README.md  pyproject.toml
training/stubs/tensorflow_decision_forests/src/tensorflow_decision_forests/: __init__.py
training/stubs/tensorflow_decision_forests/src/tensorflow_decision_forests_stub.egg-info/: PKG-INFO  SOURCES.txt
(+59 files in other folders)
